[metadata]
name = xpca
version = 0.0.1
author = Paul Alexander Bilokon
author_email = paul.bilokon@imperial.ac.uk
description = Implementations of extended PCA methods, such as IPCA and WWMPCA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sydx/xpca
project_urls =
    Bug Tracker = https://github.com/sydx/xpca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
